Batch 2: CORS security, WS token rejection, dead code removal, OAuth filter fix